Changed the first 2 endpoint list
